Fix build with automake 1.13, update to 0.0.3, add tracking info, update URLs

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  libmspub-0.0.1.tar.xz: 42dbcff37775f242207797c04778fa8465b0e702
 sources:
-  "libmspub-0.0.1.tar.xz": 42dbcff37775f242207797c04778fa8465b0e702
+  libmspub-0.0.3.tar.gz: 5b3112068e28a0b4f63b2c1da564477b0240de0f
